changed: snake_case and comment out unnecessary func
