# backend/models/dream.py
@@ -37,27 +37,6 @@ class Dream:
             return None
 
     @classmethod
-    def get_by_id(cls, id):
-        # メモのidに基づいて、特定のメモを取得
-        try:
-            conn = psycopg2.connect(**DB_CONFIG)
-            cur = conn.cursor()
-            cur.execute("SELECT id, user_id, content, is_public, likes FROM dreams WHERE id = %s", (id,))
-            result = cur.fetchone()
-            if result:
-                cur.close()
-                conn.close()
-                return cls(*result)
-            else:
-                cur.close()
-                conn.close()
-                print(f"Error occurred getting dream with id {id}")
-                return None  # メモが見つからなかった場合
-        except Exception as e:
-            print(f"Error occurred while fetching dream by id: {e}")
-            return None
-
-    @classmethod
     def create(cls, user_id, content, is_public=False):
         # 新しいメモの作成 ****user_id必要****
         try:
@@ -76,29 +55,6 @@ class Dream:
             return created_dream
         except Exception as e:
             print(f"Error occurred while creating dream: {e}")
-            return None
-
-    @classmethod
-    def update(cls, dream_id, title, content, is_public, likes):
-        # ドリームデータの一つを更新
-        # 必須データ：dream_id（投稿を特定するため）
-        try:
-            conn = psycopg2.connect(**DB_CONFIG)
-            cur = conn.cursor()
-            cur.execute(
-                "UPDATE dreams SET title = %s, content = %s, is_public = %s, likes = %s WHERE id = %s",
-                (title, content, is_public, likes, dream_id)
-            )
-            conn.commit()  # 変更をコミット
-            cur.close()
-            conn.close()
-
-            if cur.rowcount == 0:
-                print(f"Dream with id {dream_id} not found.")
-                return False
-            return True
-        except Exception as e:
-            print(f"Error occurred while updating dream: {e}")
             return None
 
     @classmethod
@@ -127,7 +83,8 @@ class Dream:
             conn = psycopg2.connect(**DB_CONFIG)
             cur = conn.cursor()
             # 並び順を一定にするためidの照準にソート
-            cur.execute("SELECT id, user_id, title, content, is_public, likes FROM dreams WHERE is_public = TRUE ORDER BY id DESC")
+            cur.execute(
+                "SELECT id, user_id, title, content, is_public, likes FROM dreams WHERE is_public = TRUE ORDER BY id DESC")
             dreams = [cls(*row) for row in cur.fetchall()]
             cur.close()
             conn.close()
@@ -137,7 +94,7 @@ class Dream:
             return None
 
     @classmethod
-    def update_likes(cls,dream_id,likes):
+    def update_likes(cls, dream_id, likes):
         # likeを指定してデータを更新
         # 必須データ：dream_id, likes
         try:
@@ -157,3 +114,48 @@ class Dream:
         except Exception as e:
             print(f"Error occurred while updating dream: {e}")
             return None
+
+    # @classmethod
+    # def get_by_id(cls, id):
+    #     # メモのidに基づいて、特定のメモを取得
+    #     try:
+    #         conn = psycopg2.connect(**DB_CONFIG)
+    #         cur = conn.cursor()
+    #         cur.execute("SELECT id, user_id, content, is_public, likes FROM dreams WHERE id = %s", (id,))
+    #         result = cur.fetchone()
+    #         if result:
+    #             cur.close()
+    #             conn.close()
+    #             return cls(*result)
+    #         else:
+    #             cur.close()
+    #             conn.close()
+    #             print(f"Error occurred getting dream with id {id}")
+    #             return None  # メモが見つからなかった場合
+    #     except Exception as e:
+    #         print(f"Error occurred while fetching dream by id: {e}")
+    #         return None
+
+
+    # @classmethod
+    # def update(cls, dream_id, title, content, is_public, likes):
+    #     # ドリームデータの一つを更新
+    #     # 必須データ：dream_id（投稿を特定するため）
+    #     try:
+    #         conn = psycopg2.connect(**DB_CONFIG)
+    #         cur = conn.cursor()
+    #         cur.execute(
+    #             "UPDATE dreams SET title = %s, content = %s, is_public = %s, likes = %s WHERE id = %s",
+    #             (title, content, is_public, likes, dream_id)
+    #         )
+    #         conn.commit()  # 変更をコミット
+    #         cur.close()
+    #         conn.close()
+    #
+    #         if cur.rowcount == 0:
+    #             print(f"Dream with id {dream_id} not found.")
+    #             return False
+    #         return True
+    #     except Exception as e:
+    #         print(f"Error occurred while updating dream: {e}")
+    #         return None
